data/derived/sp14/progs/unify/prog0172.ml.out
Characters 73-89:
  | h::t -> (mulByDigit i t) (h*i mod 10) :: [];;
            ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
